# playground

./: README.md
bilibili-live-danmaku/: CMakeLists.txt  README.md  conanfile.txt
bilibili-live-danmaku/src/: CMakeLists.txt  api.cpp  api.hpp  buffer.hpp  http.cpp  http.hpp  inflator.cpp  inflator.hpp  main.cpp  options.cpp  options.hpp
fce/: CMakeLists.txt  README.md  conanfile.txt
fce/app/: CMakeLists.txt  main.cpp
fce/include/fce/: cpu.hpp  fce.hpp  memory.hpp  types.hpp
fce/src/: CMakeLists.txt  cpu.cpp  fce.cpp  memory.cpp
fce/tests/: CMakeLists.txt  cpu.cpp
fce/tests/op/: arithmetic.cpp  branches.cpp  increments_decrements.cpp  jumps_calls.cpp  load_store_operations.cpp  logical.cpp  register_transfers.cpp  shifts.cpp  stack_operations.cpp  status_flag_changes.cpp  system.cpp
fizzbuzz/: fizzbuzz.bas  fizzbuzz.zig
font-rendering/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
font-rendering/src/: CMakeLists.txt  canvas.cpp  canvas.hpp  config.cpp  config.hpp  exceptions.cpp  exceptions.hpp  main.cpp  utils.hpp
forest-night/asset-source/: .gitignore  forest.blend
forest-night/game/: campfire.tscn  foliage.tscn  forest_meshes.tres  icon.svg.import  player.gd  player.tscn  project.godot  tree.tscn  world.tscn
forest-night/game/assets/: campfire.glb  campfire.glb.import  campfire_pine_bark_burned.png.import  fire.png.import  foliage.glb  foliage.glb.import  foliage_foliage.png.import  foliage_material.tres  ground.png.import  ground_n.png.import  sky.png.import  smoke.png.import  tree.glb  tree.glb.import  tree_material.tres  tree_pine_bark.png.import  tree_pine_needles.png.import
godot-action-rpg/: README.md  Stats.gd  World.tscn  project.godot
godot-action-rpg/Effects/: Effect.gd  EnemyDeathEffect.tscn  GrassEffect.tscn  HitEffect.tscn
godot-action-rpg/Enemies/: Bat.gd  Bat.tscn  PlayerDetectionZone.gd
godot-action-rpg/Overlap/: Hitbox.gd  Hurtbox.gd
godot-action-rpg/Player/: Player.gd  Player.tscn
godot-action-rpg/UI/: HealthUI.gd  HealthUI.tscn
godot-action-rpg/World/: Bush.tscn  Grass.gd  Grass.tscn
godot-hero-remake/: README.md  default_bus_layout.tres  project.godot
godot-hero-remake/assets/audio/: ack_00.wav.import  ao_00.wav.import  ao_01.wav.import  dead_00.wav.import  dead_01.wav.import
godot-hero-remake/assets/battle/: bomb.png.import  fightbar.png.import
godot-hero-remake/assets/fonts/: battle_font.tres  damage_font.tres  main_font.tres  main_font_data.tres  title_font.tres
godot-hero-remake/assets/npc/: npc01.png.import  npc02.png.import  npc03.png.import  npc04.png.import  npc05.png.import  npc06.png.import  npc07.png.import  npc08.png.import  npc09.png.import  npc10.png.import  npc11.png.import  npc12.png.import  npc13.png.import  npc14.png.import  npc15.png.import
godot-hero-remake/assets/tilesets/: background_tileset.tres  map1.png.import  (+2 more)
godot-hero-remake/resources/: default_bus_layout.tres
godot-hero-remake/src/: Dialogue.gd  Events.gd  Game.gd  ItemDB.gd  Stats.gd  Stats.tscn
godot-pck-dump/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
godot-pck-dump/src/: CMakeLists.txt  config.cpp  config.hpp  file.cpp  file.hpp  main.cpp
godot-pixel-platformer/: Monitor.gd  Monitor.tscn  README.md  World.gd  World.tscn  World2.tscn  YouWin.tscn  project.godot
godot-pixel-platformer/Globals/: BackgroundMusic.tscn  CRTEffect.shader  CRTEffect.tscn  Game.gd  Levels.gd  SceneTransition.gd  SceneTransition.tscn  Transition.shader
godot-pixel-platformer/Monster/: Monster.gd  Monster.png.import  Monster.tscn
godot-pixel-platformer/Overlap/: DialogTrigger.gd  DialogTrigger.tscn  Exit.gd  Exit.tscn
godot-pixel-platformer/Player/: Player.gd  Player.tscn  hurt.wav.import
godot-pixel-platformer/UI/: Dialogue.gd  Dialogue.tscn  GameComplete.gd  GameComplete.tscn  MainMenu.gd  MainMenu.tscn  NormalFont.tres  PanelFocus.tres  PanelNormal.tres  PanelPressed.tres  Theme.tres  TitleFont.tres  panel.png.import
godot-pixel-platformer/World/: 8bit-OnTheOffensiveV2.ogg.import  Coin.gd  Coin.tscn  Spikes.gd  Spikes.png.import  Spikes.tscn  Sprites.png.import  Tileset.tres  World.gd  World.tscn  World2.tscn  YouWin.tscn  coin.wav.import
godot-pixel-platformer/assets/: monster.png.import  objects.png.import  panel.png.import
godot-rts/: BuildingPanel.gd  BuildingPanel.tscn  Database.gd  Placing.gd  SimpleButton.gd  Structures.gd  Unit.gd  Unit.tscn  World.gd  World.tscn  project.godot
godot-turn-based-strategy/: Player.gd  Player.tscn  World.gd  World.tscn  project.godot
hazel/: .cmake-format.yaml  CMakeLists.txt  README.md  conanfile.txt
hazel/examples/: CMakeLists.txt  sandbox.cpp
hazel/include/hazel/: application.hpp  hazel.hpp  log.hpp
hazel/src/hazel/: CMakeLists.txt  application.cpp  log.cpp
musializer/: .gitignore  build.zig
musializer/src/: main.zig  plug.zig
pe-dump/: CMakeLists.txt  conanfile.txt
pe-dump/src/: CMakeLists.txt  main.cpp
pico-8-mancala/: README.md  mancala.p8
pixel-arts/: simple-grass-outdoor-tileset.aseprite
pixel-arts/demo/: .gitignore  World.tscn  project.godot
raycasting/: bun.lockb  index.html  package.json
raycasting/src/: main.ts  style.css
retro-3d-graphics/: README.md  knight.blend  plateau.blend  sunset.blend  windmill.blend
retro-3d-graphics/godot/: project.godot
sdl-joystick/: .gitignore  CMakeLists.txt  conanfile.txt
sdl-joystick/src/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  scope_exit.hpp
vulkan-zig/: README.md  build.zig
vulkan-zig/src/: CommandBuffer.zig  CommandPool.zig  Swapchain.zig  c.zig  main.zig
zig-gtk-demo/: build.zig  build.zig.zon
zig-gtk-demo/src/: builder.ui  gtk.zig  main.zig
zig-mbedtls-demo/: README.md  build.zig  build.zig.zon
zig-mbedtls-demo/src/: main.zig
zig-opengl/: build.zig  build.zig.zon
zig-opengl/src/: Gui.zig  audio.zig  audio_test.zig  c.zig  decoder.zig  main.zig
zig-riscv-os/: README.md  build.zig  build.zig.zon
zig-riscv-os/src/: Memory.zig  boot.S  linker.ld  main.zig  uart.zig
zig-zlib-demo/: README.md  build.zig  build.zig.zon
zig-zlib-demo/src/: main.zig
(+179 files in other folders)
